turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:27: error: type mismatch;
 found   : Int(0)
 required: Array[Int]
    case 0 => 
         ^Turmite:28: error: type mismatch;
 found   : Int(1)
 required: Array[Int]
    case 1 => forward()
         ^Turmite:29: error: type mismatch;
 found   : Int(2)
 required: Array[Int]
    case 2 => left() ; forward()
         ^Turmite:30: error: type mismatch;
 found   : Int(4)
 required: Array[Int]
    case 4 => left() ; left() ; forward()
         ^Turmite:31: error: type mismatch;
 found   : Int(8)
 required: Array[Int]
    case 8 => right(); forward()
         ^